--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Personal Website</title>
+        <title>Ernest Afum</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./style.css">
@@ -42,7 +42,7 @@
 
                 <div class="bottom-container">
                     <a class="footer-link" href="https://www.linkedin.com/in/ernestafum/">LinkedIn</a>
-                    <a class="footer-link" href="https://twitter.com/yu_angela">Twitter</a>
+                    <a class="footer-link" href="https://twitter.com/ernest_afum">Twitter</a>
                     <a class="footer-link" href="https://ernestafum.github.io/html-resume/">Website</a>
                     <p class="copyright">© Ernest Afum</p>
                 </div>
