--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                         <p class="intro">
                             I am a self-taught network administrator and I'm also very passionate about learning programming.
                         </p>
+                        <hr/>
+                        <div>
+                            <p>
+                                The links below will take you to <br/>other websites where you can access various information<br/>
+                                 about me.
+                            </p>
+                        </div>
+                        <hr/>
+
                         <div class="skills">
                             <a class="btn btn-primary" href="Capstone project 1/index.html" role="button">My Skills</a>
                         </div>
