--- a/index.html
+++ b/index.html
@@ -26,19 +26,16 @@
                         <img class="image" src="./images/headshot.jpg" alt="my headshot" height="180px">
                         <h2>Hello</h2>
                         <p class="intro">
-                            I am a self-taught network administrator and I'm also very passionate about learning programming.
+                            I am a self-taught network administrator and I'm also very passionate about learning programming.<br/>
+                            Get in touch with me if you love anime and programming like I do.
                         </p>
-                        <hr/>
-                        <div>
-                            <p>
-                                The links below will take you to <br/>other websites where you can access various information<br/>
-                                 about me.
-                            </p>
-                        </div>
-                        <hr/>
-
                         <div class="skills">
                             <a class="btn btn-primary" href="Capstone project 1/index.html" role="button">My Skills</a>
+                        </div>
+                        <div class="video">
+                            <video width="500px" height="400px" controls>
+                                <source src="./images/webvideo.mp4" type="video/mp4">
+                            </video>
                         </div>
                         <div class="about">
                             <a class="btn btn-primary" href="Capstone project 1/about.html" role="button">About Me</a>
@@ -55,7 +52,6 @@
                     <a class="footer-link" href="https://ernestafum.github.io/html-resume/">Website</a>
                     <p class="copyright">© Ernest Afum</p>
                 </div>
-                
     </body>
 
 </html>
