--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                         <img class="image" src="./images/headshot.jpg" alt="my headshot" height="180px">
                         <h2>Hello</h2>
                         <p class="intro">
-                            I am a self-taught network administrator and I'm also very passionate about learning programming.<br/>
-                            Get in touch with me if you love anime and programming like I do.
+                            I am a self-taught network administrator and I'm also very passionate
+                            about learning programming.<br/>
+                            Get in touch with me if you love anime and programming like<br/>
+                             I do.
                         </p>
                         <div class="skills">
                             <a class="btn btn-primary" href="Capstone project 1/index.html" role="button">My Skills</a>
