--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <hr>
                     <h2>Get In Touch</h2>
-                    <p>
+                    <p class="reach-out">
                         Love programming as much as I do? Let's talk about how awesome it is!<br />
                         We can code while we watch anime! You can also find me to talk about anything<br />
                         web development or anime related at any of my socials below the page.<br />
