--- a/about.html
+++ b/about.html
@@ -28,8 +28,8 @@
  <h2>Here is everything to know about me:</h2>
 
  <p>
-    I am 20 years old and I am very passionate about pragramming.<br/>
-    I like watching anime and reading manwha a lot.<br/>
+    My name is Ernest and I am very passionate about pragramming.<br/>
+    I like watching anime and reading manhwa a lot.<br/>
     I read novels at times too and I also wish to publish a novel someday.<br/>
     I am an aspiring cyber security analyst and I wish to create something great with my programming skills someday.<br/>
     You can reach out to me at any of my socials on the home page or at any of my contacts on the contact me page.
