--- a/index.html
+++ b/index.html
@@ -61,18 +61,16 @@
                         web development or anime related at any of my socials below the page.<br />
                     </p>
                     <div class="about">
-                        <a class="btn btn-primary" href="/about.html" role="button">About Me</a>
+                        <a class="btn btn-primary" href="./about.html" role="button">About Me</a>
                     </div>    
                     <div class="contact">
-                        <a class="btn btn-primary" href="/contact.html" role="button">Contact Me</a>
+                        <a class="btn btn-primary" href="./contact.html" role="button">Contact Me</a>
                     </div>
                 </div>
                     
-                
-
                 <div class="bottom-container">
                     <a class="footer-link" href="https://www.linkedin.com/in/ernestafum/">LinkedIn</a>
-                    <a class="footer-link" href="https://twitter.com/ernest_afum">Twitter</a>
+                    <a class="footer-link" href="https://www.twitter.com/ernest_afum">Twitter</a>
                     <a class="footer-link" href="https://www.instagram.com/his.chronicle">Instagram</a>
                     <p class="copyright">© Ernest Afum</p>
                 </div>
